@@ -187,7 +187,7 @@ Bugs fixed
   Thanks to Takeshi Komiya.
 * PR#265: Fix could not capture caption of graphviz node by xref. Thanks to
   Takeshi Komiya.
-* PR#263, #1013, #1103: Rewrite of C++ domain. Thanks to Jakob Lykke Andersen.
+* PR#263, #1013, #1103, #772: Rewrite of C++ domain. Thanks to Jakob Lykke Andersen.
 
   * Hyperlinks to all found nested names and template arguments (#1103).
   * Support for function types everywhere, e.g., in
@@ -203,6 +203,8 @@ Bugs fixed
   * Index names may be different now. Elements are indexed by their fully
     qualified name. It should be rather easy to change this behaviour and
     potentially index by namespaces/classes as well.
+  * Support for scoped and unscoped enums. Enumerators in unscoped enums
+    are injected into the parent scope in addition to the enum scope.
 
 * PR#258, #939: Add dedent option for :rst:dir:`code-block` and
   :rst:dir:`literal-include`. Thanks to Zafar Siddiqui.
